src/main/java/com/example/fas/exceptions/user/invalid/LastNameInvalidException.java
package com.example.fas.exceptions.user.invalid;

public class LastNameInvalidException extends RuntimeException {
    public LastNameInvalidException(String message) {
        super(message);
    }
}
